@@ -1,3 +1,8 @@
+2010-03-01  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/validation.rb: string copy on changing encoding of
+	form value.
+
 2010-02-27  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/setup.rb: unit test driver is added to setup runtime.
